# aeroforge

./: .gitignore  .mcp.json  CLAUDE.md  CODEX.md  README.md  aeroforge.bom.yaml  aeroforge.yaml  cad-progress.md  package.json  pyproject.toml  requirements.txt
.claude/: active_project  analysis_iteration_cascade.md  settings.json  settings.local.json
.github/: pull_request_template.md
cad/: CAD_FRAMEWORK.md
config/: project_init_options.yaml  system_providers.yaml
docs/: BOM.md  README.md  automatic_glider_workflow.md  design_concept.md  environment_notes_2026-04-02.md  philosophy.md  slicer_pipeline.md  spec_registry.md  specifications.md  top_down_redesign_audit_2026-04-02.md  vase_mode_slot_analysis.md  workflow.md
exports/: workflow_dashboard.html
hooks/: aero_consensus_check.py  anti_simplification_hook.py  assembly_validate.py  cad_post_execute.py  cad_pre_commit.py  cad_pre_execute.py  cad_structure_validate.py  complexity_check.py  deliverable_bom_sync.py  freecad_autolaunch.py  freecad_rpc_helper.py  pre-push.sh  workflow_step_guard.py
scripts/: build_hardware_electronics.py  build_hstab.py  build_hstab_geodesic.py  build_hstab_left_v5.py  build_hstab_left_v7.py  build_hstab_offshelf_v6.py  build_servos.py  build_tip_caps.py  build_vstab_motor.py  draw_elevator_left_v5.py  draw_fuselage_s4b_fin_top.py  draw_hardware_electronics.py  draw_hstab_assembly.py  draw_hstab_assembly_v5.py  draw_hstab_assembly_v6.py  draw_hstab_hinge_strip_v5.py  draw_hstab_left.py  draw_hstab_left_v6.py  draw_hstab_offshelf.py  draw_hstab_right.py  draw_hstab_right_v6.py  draw_hstab_stab_left.py  draw_iva_assembly.py  draw_rudder.py  draw_top_level_assemblies.py  draw_wing_panel_p1.py  draw_wing_panels_p2_p5.py  freecad_startup_mcp.py  hstab_geometry.py  hstab_r2_analysis.py  launch_freecad_auto_mcp.py  launch_workflow_stack.ps1  publish_wiki.ps1  render_all_mesh.py  render_hardware_electronics.py  render_rudder.py  sketch_hstab_assembly.py  structural_review_r4_calc.py
src/: __init__.py
tests/: __init__.py  conftest.py  test_airfoils.py  test_bom.py  test_bom_sync.py  test_cfd_cuda_validation.py  test_cfd_feedback.py  test_cfd_monitor.py  test_cfd_results.py  test_cfd_visualization.py  (+14 more)
(+402 files in other folders)
